popravljene neke stvari
